Fix cropper on edit profile page

--- a/applications/dashboard/design/style-compat.css
+++ b/applications/dashboard/design/style-compat.css
@@ -1,13 +1,17 @@
+.change-picture {
+  max-width: 100%;
+}
+
 .box-crop .box-source {
   max-width: 100%;
   overflow: auto;
 }
 
 @media screen and (max-width: 600px) {
-  .box-crop .box-source {
+  .Popup .box-crop .box-source {
     display: none;
   }
-  .change-picture .padded {
+  .Popup .change-picture .thumbnail-message {
     display: none;
   }
 }
