--- a/applications/dashboard/scss/compat-fixes/_image-cropper.scss
+++ b/applications/dashboard/scss/compat-fixes/_image-cropper.scss
@@ -1,16 +1,22 @@
 // Fixes for the image cropper
 
+.change-picture {
+    max-width: 100%;
+}
+
 .box-crop .box-source {
     max-width: 100%;
     overflow: auto;
 }
 
 @media screen and (max-width: 600px) {
-    .box-crop .box-source {
-        display: none;
-    }
+    .Popup {
+        .box-crop .box-source {
+            display: none;
+        }
 
-    .change-picture .thumbnail-message {
-        display: none;
+        .change-picture .thumbnail-message {
+            display: none;
+        }
     }
 }
